--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-    "@shopify/react-native-skia": "2.0.0-next.4",
-    "expo": "~53.0.22",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-screen-orientation": "~8.1.7",
-    "expo-status-bar": "~2.2.3",
+    "@shopify/react-native-skia": "2.2.12",
+    "expo": "^54.0.7",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-screen-orientation": "~9.0.7",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^12.2.1",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "2.24.0",
-    "react-native-reanimated": "3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "4.11.1",
-    "react-native-svg": "15.11.2"
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1",
+    "@expo/metro-config": "~54.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
