--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@shopify/react-native-skia": "2.2.12",
+    "base-64": "^1.0.0",
     "expo": "^54.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
@@ -23,6 +24,7 @@
     "firebase": "^12.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-konva-to-svg": "^1.0.2",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
