--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/auth": "^23.3.1",
+    "@react-native-firebase/storage": "^23.3.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@shopify/react-native-skia": "2.2.12",
     "base-64": "^1.0.0",
+    "buffer": "^6.0.3",
     "expo": "^54.0.7",
+    "expo-firebase-core": "^6.0.0",
+    "expo-firebase-storage": "^2.0.0",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
     "expo-status-bar": "~3.0.8",
@@ -26,6 +30,8 @@
     "react-dom": "19.1.0",
     "react-konva-to-svg": "^1.0.2",
     "react-native": "0.81.4",
+    "react-native-base64": "^0.2.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
