--- a/package.json
+++ b/package.json
@@ -10,22 +10,17 @@
   },
   "dependencies": {
     "@expo/metro-config": "~54.0.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-firebase/app": "^23.3.1",
-    "@react-native-firebase/auth": "^23.3.1",
-    "@react-native-firebase/storage": "^23.3.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@shopify/react-native-skia": "2.2.12",
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "expo": "^54.0.7",
-    "expo-firebase-core": "^6.0.0",
-    "expo-firebase-storage": "^2.0.0",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
     "expo-status-bar": "~3.0.8",
-    "firebase": "^12.2.1",
+    "firebase": "^12.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva-to-svg": "^1.0.2",
