--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "expo-file-system": "~19.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
