--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
   "dependencies": {
     "@expo/metro-config": "~54.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@shopify/react-native-skia": "2.2.12",
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
+    "color-convert": "^3.1.2",
     "expo": "~54.0.10",
+    "expo-file-system": "~19.0.15",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
     "react-konva-to-svg": "^1.0.2",
     "react-native": "0.81.4",
     "react-native-base64": "^0.2.1",
+    "react-native-color-picker": "^0.6.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
@@ -33,8 +38,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1",
-    "expo-file-system": "~19.0.14"
+    "react-native-wheel-color-picker": "^1.3.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
