--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-file-system": "~19.0.15",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
