--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "buffer": "^6.0.3",
     "color-convert": "^3.1.2",
     "expo": "~54.0.10",
+    "expo-av": "~16.0.7",
     "expo-file-system": "~19.0.15",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
