--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.0.1",
+    "@react-navigation/drawer": "^7.7.10",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@shopify/react-native-skia": "2.2.12",
@@ -20,6 +21,7 @@
     "buffer": "^6.0.3",
     "color-convert": "^3.1.2",
     "expo": "~54.0.10",
+    "expo-audio": "~1.1.1",
     "expo-av": "~16.0.7",
     "expo-file-system": "~19.0.15",
     "expo-linear-gradient": "~15.0.7",
