--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~54.0.10",
     "expo-audio": "~1.1.1",
     "expo-av": "~16.0.7",
+    "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.15",
     "expo-linear-gradient": "~15.0.7",
     "expo-screen-orientation": "~9.0.7",
