--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-konva-to-svg": "^1.0.2",
     "react-native": "0.81.4",
     "react-native-base64": "^0.2.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-color-picker": "^0.6.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
