--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
